added my secret button

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <title>Fuzzy Sock Fan Club</title>
     <link rel="stylesheet" href="index.css">
+    <script src="index.js" defer></script>
 </html>
 <body>
     <header>
         <h1>Welcome to the Fuzzy Sock Fan Club!</h1>
     </header>
     <body>
-        Here's my faviorite fuzzy socks:
+        Here's my favorite fuzzy socks:
         <image src="fuzzy-sock.webp" alt="A pair of fuzzy socks" width="300">
     </body>
+    <button>secret button</button>
 </html>
